# latent

./: .gitignore  Cargo.toml  README.md
.claude/commands/: large-scale-audit.md
audits/: METHODOLOGY.md  README.md  theory-resources.md
audits/code-review/: 01-raw-and-image-foundations.md  02-pipeline-and-edit-model.md  03-cpu-and-gpu-backends.md  04-export-lens-app.md
audits/decisions/: 01-color-science.md  02-raw-decode-and-demosaic.md  03-tone-and-color-grading.md  04-spatial-and-frequency.md  05-geometry-and-optics.md  README.md
audits/decisions/code-review/: 01-raw-and-image-foundations.md  02-pipeline-and-edit-model.md  03-cpu-and-gpu-backends.md  04-export-lens-app.md  README.md
audits/image-processing/: 01-color-science.md  02-raw-decode-and-demosaic.md  03-tone-and-color-grading.md  04-spatial-and-frequency.md  05-geometry-and-optics.md
audits/kanban/: E0-color-core.md  E1-tone-grading.md  E2-decode-sensor.md  E3-lens.md  E4-dehaze.md  E5-spatial.md  E6-resampling-gpu.md  E7-data-model.md  E8-export-app.md  README.md
audits/ux-kanban/: L0-lens-matching.md  R2-fixes.md  README.md  TESTING.md  U0-foundation.md  U1-viewport.md  U2-canvas-tools.md  U3-panels.md  U4-file-session.md  U5-scopes.md  U6-feature-parity.md  U7-ergonomics.md  U8-states-polish.md
docs/: geometry-lensfun-calibration-format.html  geometry-lensfun-corrections.html  geometry-lensfun-lens-models.html  geometry-panotools-lens-correction-model.html
latent-app/: Cargo.toml  FRONTEND.md
latent-app/assets/: Latent.desktop  latent.desktop
latent-app/assets/fonts/: README.md
latent-app/src/: gui.rs  main.rs
latent-app/src/gui/: app.rs  canvas.rs  config.rs  dialogs.rs  icons.rs  mod.rs  scopes.rs  shortcuts.rs  state.rs  theme.rs  toasts.rs  widgets.rs
latent-app/src/gui/panels/: controls.rs  history.rs  history_summary.rs  menubar.rs  mod.rs  presets.rs  sections.rs  statusbar.rs  toolbar.rs  variants.rs  welcome.rs
latent-app/src/gui/tools/: crop.rs  keystone.rs  mask_shape.rs  mod.rs  overlay.rs  straighten.rs
latent-app/src/gui/widgets/: wb.rs
latent-app/tests/: cli.rs
latent-cpu/: Cargo.toml
latent-cpu/src/: lib.rs
latent-edit/: Cargo.toml
latent-edit/src/: describe.rs  history.rs  lib.rs
latent-export/: Cargo.toml
latent-export/src/: lib.rs
latent-gpu/: Cargo.toml
latent-gpu/src/: box_blur.wgsl  combine.wgsl  lib.rs  map_pixels.wgsl  radial_gain.wgsl  resample.wgsl  warp.wgsl
latent-image/: Cargo.toml
latent-image/src/: color.rs  lib.rs  tone.rs
latent-lens/: Cargo.toml  build.rs
latent-lens/examples/: lookup.rs
latent-lens/src/: lib.rs
latent-pipeline/: Cargo.toml
latent-pipeline/src/: lib.rs
latent-raw/: Cargo.toml  build.rs
latent-raw/src/: lib.rs
