[package]
name = "latent-app"
version.workspace = true
edition.workspace = true
license.workspace = true

# The user-facing binary is `latent`, not `latent-app`.
[[bin]]
name = "latent"
path = "src/main.rs"

[dependencies]
latent-image = { path = "../latent-image" }
latent-raw = { path = "../latent-raw" }
latent-export = { path = "../latent-export" }
clap = { version = "4", features = ["derive"] }
