[package]
name = "latent-app"
version.workspace = true
edition.workspace = true
license.workspace = true

# The user-facing binary is `latent`, not `latent-app`.
[[bin]]
name = "latent"
path = "src/main.rs"

[dependencies]
latent-image = { path = "../latent-image" }
latent-raw = { path = "../latent-raw" }
latent-edit = { path = "../latent-edit" }
latent-lens = { path = "../latent-lens" }
latent-pipeline = { path = "../latent-pipeline" }
latent-cpu = { path = "../latent-cpu" }
latent-gpu = { path = "../latent-gpu" }
latent-export = { path = "../latent-export" }
clap = { version = "4", features = ["derive"] }
eframe = "0.32"
image = "0.25"
